# vebfs

./: MANIFEST.in  README.md  example.py  example.txt  pyproject.toml  setup.py
tests/: test_vebfs.py
vebfs/: __init__.py  file_operations.py  file_search.py
vebfs/vebfs.egg-info/: PKG-INFO  SOURCES.txt
