[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vebfs"
version = "0.1.2"
description = "Утилиты для работы с файловой системой"
authors = [{name="veb-bet"}]
license = {text = "BSD-2-Clause"}
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["vebfs"]
